# LexSO

./: README.md  config.example.py  extract_all_gzipped_html.py  get_so_list.py  lexso.py  pyproject.toml  requirements.txt  scrape_data.py
data/: P9837.csv
models/: extractor.py  so.py  wikidata.py
modules/: wdqs.py
test_data/: test1.html  test2.html
tests/: test_extractor.py
