[tool.poetry]
name = "lexso"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pydantic = "^2.7.2"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.4"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
